package edu.fiuba.algo3.modelo.Sorpresa;

import edu.fiuba.algo3.modelo.Accionable;
import edu.fiuba.algo3.modelo.Vehiculos.Vehiculo;

public interface Sorpresa extends Accionable {

    void sorprender(Vehiculo vehiculo);

}
